# ESP-32-Battleship

./: README.md
audio/c24k_8b/: userSound.c  userSound.h
components/joy/: joy.c
components/lcd/: lcd.h
components/pin/: pin.c
components/tone/: tone.c  tone.h
lab01/main/: main.c
lab03/main/: main.c
lab04/components/c24k_8b/: userSound.h
lab05/main/: coord.h  ship.h
lab06/main/: gameControl.c  missile.c  missile.h  plane.c
lab07/: Functions.md
lab07/main/: CMakeLists.txt  attack.c  attack.h  board.c  board.h  com.c  config.h  coord.c  coord.h  game.c  game.h  graphics.c  graphics.h  main.c  menu.c  menu.h  music.c  music.h  player.c  player.h  ship.c  ship.h
retro/: prog.ps1
retro/notes/nes/: BombSweeper.txt  BoxBoy.txt  GemVenture.txt  Indivisible.txt  SolarWars.txt
